--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^6.0.13",
     "@mantine/hooks": "^6.0.11",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
