--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^6.0.13",
     "@mantine/hooks": "^6.0.11",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
